Update 'lkevk15be-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:8126e23831ae7a5c5160039012c4328521441ef9@sha256:b893f5393d4519b9e050acd46237aebb738988733e594ae89f4c16caa355517d

--- a/components/lkevk15be-python/overlays/development/deployment-patch.yaml
+++ b/components/lkevk15be-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: lkevk15be-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:8126e23831ae7a5c5160039012c4328521441ef9@sha256:b893f5393d4519b9e050acd46237aebb738988733e594ae89f4c16caa355517d
+          name: container-image
